--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.pythonPath": ".venv/bin/python",
-    "python.formatting.blackPath": ".venv/bin/black"
+    "python.formatting.blackPath": ".venv/bin/black",
+    "restructuredtext.confPath": "${workspaceFolder}/docs/source"
 }
