--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,40 @@
+alabaster==0.7.12
 appdirs==1.4.4
+Babel==2.9.0
 black==20.8b1
+certifi==2020.11.8
+chardet==3.0.4
 click==7.1.2
 dataclasses==0.8
+docutils==0.16
 flake8==3.8.4
+idna==2.10
+imagesize==1.2.0
 importlib-metadata==3.1.1
+Jinja2==2.11.2
+MarkupSafe==1.1.1
 mccabe==0.6.1
 mypy-extensions==0.4.3
+packaging==20.7
 pathspec==0.8.1
 pkg-resources==0.0.0
 pycodestyle==2.6.0
 pyflakes==2.2.0
+Pygments==2.7.2
+pyparsing==2.4.7
+pytz==2020.4
 regex==2020.11.13
+requests==2.25.0
+snowballstemmer==2.0.0
+Sphinx==3.3.1
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
 toml==0.10.2
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
+urllib3==1.26.2
 zipp==3.4.0
